--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123rf.com%2Fphoto_145196306_stock-vector-black-chess-knight-horse-silhouette-logo-design.html&psig=AOvVaw1c7CQewry5G7aCzzltW2Jk&ust=1679579235309000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJD2r6_W7_0CFQAAAAAdAAAAABAE" /> -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Russo+One&display=swap" rel="stylesheet">
